force-app/main/default/objects/CopilotAnalyticsCalculator__dll/fields/BotId__c.field-meta.xml
<CustomField>
    <fullName>BotId__c</fullName>
    <label>Bot ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>BotId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>