force-app/main/default/objects/CopilotAnalyticsCalculator__dll/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>Feature</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>