force-app/main/default/objects/CopilotAnalyticsCalculator__dll/fields/GroupByField1__c.field-meta.xml
<CustomField>
    <fullName>GroupByField1__c</fullName>
    <label>Group By Field 1</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>GroupByField1</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>