force-app/main/default/objects/CopilotAnalyticsCalculator__dll/fields/GroupByField3__c.field-meta.xml
<CustomField>
    <fullName>GroupByField3__c</fullName>
    <label>Group By Field 3</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>GroupByField3</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>