force-app/main/default/objects/CopilotAnalyticsCalculator__dll/fields/GroupByValue1__c.field-meta.xml
<CustomField>
    <fullName>GroupByValue1__c</fullName>
    <label>Group By Value 1</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>GroupByValue1</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>