force-app/main/default/objects/CopilotAnalyticsCalculator__dll/fields/MetricKey__c.field-meta.xml
<CustomField>
    <fullName>MetricKey__c</fullName>
    <label>Metric Key</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>MetricKey</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>