force-app/main/default/objects/CopilotAnalyticsCalculator__dll/fields/MetricValue__c.field-meta.xml
<CustomField>
    <fullName>MetricValue__c</fullName>
    <label>Metric Value</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <externalName>MetricValue</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>